<resources>
    <string name="app_name">Produkty</string>
    <string name="loading_items_please_wait">Loading items, please wait</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>

    <string name="the_email_or_password_is_incorrect">The email or password is incorrect</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_http_error">Unknown HTTP error</string>
    <string name="log_into_your_account">Log into your account!</string>
    <string name="please_make_sure_all_field_are_filled_in">Please make sure all fields are filled in</string>
    <string name="please_make_sure_you_have_entered_correct_email">Please make sure you have entered correct email</string>
    <string name="the_token_has_expired_or_is_incorrect">The token has expired or is incorrect</string>

    <string name="price">Price</string>
    <string name="gross">Gross</string>
    <string name="vat">VAT</string>
    <string name="lazy_column">Lazy column</string>

</resources>